# Athena

./: .ai_profile  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.pre-asp  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  ROADMAP.yaml  SECURITY.md  athena-battle-monitor.pen  athena-mission-planner.pen  docker-compose.mcp.yml  docker-compose.yml  mcp_servers.json
athena-workspace/: Cargo.toml
athena-workspace/src/: main.rs
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_opsec_mission_tables.py  003_add_brief_md_column.py  004_add_failure_category.py  005_add_performance_indexes.py
backend/app/: __init__.py  config.py  database.py  main.py  ws_manager.py
backend/app/cli/: __init__.py  generate_relay_script.py
backend/app/clients/: __init__.py  _ssh_common.py  ai_engine_client.py  c2_client.py  caldera_client.py  direct_ssh_client.py  mcp_engine_client.py  metasploit_client.py  mock_c2_client.py  mock_caldera_client.py  persistent_ssh_client.py  pgsql_client.py  shannon_client.py  winrm_client.py
backend/app/data/: backport_patterns.yaml  cpe_mappings.yaml  cve_prerequisites.yaml  default_credentials.yaml  exploitable_banners.yaml  kill_chain_stages.yaml  mission_profiles.yaml  noise_risk_matrix.yaml  protocol_map.yaml  technique_rules.yaml  weaponized_cves.yaml
backend/app/database/: __init__.py  manager.py  seed.py
backend/app/models/: __init__.py  agent.py  api_schemas.py  attack_graph.py  c5isr.py  constraint.py  credential.py  engagement.py  enums.py  fact.py  log_entry.py  mission.py  ooda.py  operation.py  opsec.py  osint.py  playbook.py  poc_record.py  recommendation.py  recon.py  report.py  target.py  technique.py  technique_execution.py  tool_registry.py  user.py  vuln.py
backend/app/routers/: __init__.py  _deps.py  admin.py  agents.py  attack_graph.py  c5isr.py  constraints.py  dashboard.py  engagements.py  facts.py  health.py  logs.py  missions.py  objectives.py  ooda.py  operations.py  opsec.py  playbooks.py  poc.py  recommendations.py  recon.py  reports.py  targets.py  techniques.py  terminal.py  tools.py  vulnerabilities.py  ws.py
backend/app/seed/: __init__.py  demo_runner.py  demo_scenario.py
backend/app/services/: __init__.py  agent_capability_matcher.py  agent_swarm.py  attack_graph_engine.py  brief_generator.py  c5isr_mapper.py  constraint_engine.py  decision_engine.py  engine_registry.py  engine_router.py  exploit_validator.py  fact_collector.py  initial_access_engine.py  kill_chain_enforcer.py  knowledge_base.py  llm_client.py  mcp_client_manager.py  mcp_fact_extractor.py  mission_profile_loader.py  node_summarizer.py  oauth_token_manager.py  ooda_controller.py  ooda_scheduler.py  ooda_trigger.py  opsec_monitor.py  orient_engine.py  osint_engine.py  persistence_engine.py  prerequisite_ordering.py  recon_engine.py  relay_monitor.py  relay_router.py  report_generator.py  scope_validator.py  skill_loader.py  threat_level.py  validation_engine.py  validation_protocol.py  vuln_lookup.py  vulnerability_manager.py
backend/app/utils/: enum_safety.py
backend/tests/: __init__.py  conftest.py  test_access_recovery.py  test_access_recovery_phases.py  test_ad_playbooks.py  test_admin.py  test_admin_router.py  test_adr048_cloud_ssrf.py  test_agent_capability_matcher.py  test_agent_swarm.py  test_agents_router.py  test_async_sync_endpoints.py  test_attack_graph.py  test_attack_graph_router.py  test_attack_graph_yaml.py  test_c5isr_domain_reports.py  test_c5isr_reports.py  test_c5isr_router.py  test_composite_confidence.py  test_constraint_engine.py  test_constraints_router.py  test_dashboard_api.py  test_dashboard_router.py  test_e2e_ooda_loop.py  test_engagements_router.py  test_engine_fallback.py  test_exploit_validator.py  test_facts_router.py  test_health_mcp.py  test_health_router.py  test_initial_access_engine.py  test_initial_access_ooda.py  test_integration_real_mode.py  test_kill_chain_enforcer.py  test_lateral_movement.py  test_lateral_topology.py  test_llm_model_routing.py  test_logs_router.py  test_mcp_api_fuzzer.py  test_mcp_client_manager.py  (+69 more)
backend/tests/sit/: __init__.py  conftest.py  test_sit_attack_graph.py  test_sit_compromise_gate.py  test_sit_constraint_engine.py  test_sit_controller_c5isr.py  test_sit_controller_fact_collector.py  test_sit_controller_orient.py  test_sit_decision_advanced.py  test_sit_decision_router.py  test_sit_full_cycle.py  test_sit_opsec_post_act.py  test_sit_orient_decision.py  test_sit_router_fact_collector.py  test_sit_vuln_brief.py
cli/: pyproject.toml
cli/athena_cli/: __init__.py  api.py  config.py  display.py  main.py  ws.py
cli/athena_cli/commands/: c5isr.py  intel.py  ooda.py  ops.py  recon.py
crates/athena-act/: Cargo.toml
crates/athena-act/src/: lib.rs  router.rs
crates/athena-api/: Cargo.toml
crates/athena-api/src/: auth.rs  error.rs  lib.rs  router.rs
crates/athena-attack-graph/: Cargo.toml
crates/athena-attack-graph/src/: lib.rs
crates/athena-brief/: Cargo.toml
crates/athena-brief/src/: lib.rs
crates/athena-config-engine/: Cargo.toml
crates/athena-db/: Cargo.toml
crates/athena-db/src/: lib.rs  (+1 more)
crates/athena-decide/: Cargo.toml
crates/athena-engine-killchain/: Cargo.toml
crates/athena-engine-ooda/: Cargo.toml
crates/athena-exec-ssh/: Cargo.toml
crates/athena-facts/: Cargo.toml
crates/athena-knowledge/: Cargo.toml
crates/athena-mcp-client/: Cargo.toml
crates/athena-mcp-fact-extractor/: Cargo.toml
crates/athena-mcp-server/: Cargo.toml
crates/athena-observe/: Cargo.toml
crates/athena-orient/: Cargo.toml
crates/athena-policy/: Cargo.toml
crates/athena-report/: Cargo.toml
crates/athena-scheduler/: Cargo.toml
crates/athena-scope/: Cargo.toml
crates/athena-skills-loader/: Cargo.toml
crates/athena-swarm/: Cargo.toml
crates/athena-ws/: Cargo.toml
tools/_template/: Dockerfile  README.md  pyproject.toml  server.py  tool.yaml
tools/ad-persistence/: Dockerfile  README.md  pyproject.toml  server.py  tool.yaml
(+862 files in other folders)
