[package]
name = "athena-workspace"
version.workspace = true
edition.workspace = true
default-run = "athena"

[[bin]]
name = "athena"
path = "src/main.rs"

[dependencies]
athena-types = { workspace = true }
athena-config = { workspace = true }
athena-telemetry = { workspace = true }
athena-events = { workspace = true }
athena-api = { workspace = true }
athena-facts = { workspace = true }
athena-engine-ooda = { workspace = true }
athena-observe = { workspace = true }
athena-orient = { workspace = true }
athena-decide = { workspace = true }
athena-act = { workspace = true }
athena-scheduler = { workspace = true }
athena-scope = { workspace = true }
athena-opsec = { workspace = true }
athena-c5isr = { workspace = true }
athena-vuln = { workspace = true }
athena-pentest-kb = { workspace = true }
athena-brief = { workspace = true }
athena-report = { workspace = true }
athena-recon = { workspace = true }
athena-mcp-client = { workspace = true }
athena-mcp-fact-extractor = { workspace = true }
athena-exec-ssh = { workspace = true }
athena-swarm = { workspace = true }
athena-llm-client = { workspace = true }
athena-knowledge = { workspace = true }
athena-attack-graph = { workspace = true }
athena-skills-loader = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
