[project]
name = "athena-cli"
version = "0.1.0"
description = "CLI for the Athena C5ISR pentest platform"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
]

[project.scripts]
athena = "athena_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
