[package]
name = "athena-act"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-mcp-client = { workspace = true }
athena-exec-ssh = { workspace = true }
athena-mcp-fact-extractor = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
