[package]
name = "athena-api"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-config = { workspace = true }
athena-engine-ooda = { workspace = true }
athena-events = { workspace = true }
athena-ws = { workspace = true }
athena-db = { workspace = true }
athena-facts = { workspace = true }
athena-observe = { workspace = true }
athena-orient = { workspace = true }
athena-decide = { workspace = true }
athena-act = { workspace = true }
athena-scheduler = { workspace = true }
athena-scope = { workspace = true }
athena-opsec = { workspace = true }
athena-c5isr = { workspace = true }
athena-vuln = { workspace = true }
athena-pentest-kb = { workspace = true }
athena-brief = { workspace = true }
athena-report = { workspace = true }
athena-recon = { workspace = true }
athena-swarm = { workspace = true }
athena-mcp-client = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = "0.5"
