[package]
name = "athena-brief"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-db = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
