[package]
name = "athena-db"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-config = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
