[package]
name = "athena-exec-ssh"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
