[package]
name = "athena-facts"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-db = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
