[package]
name = "athena-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
