[package]
name = "athena-mcp-client"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-config = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
