[package]
name = "athena-mcp-fact-extractor"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-facts = { workspace = true }
athena-mcp-client = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
