[package]
name = "athena-policy"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-knowledge = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
