[package]
name = "athena-report"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-db = { workspace = true }
athena-facts = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
