[package]
name = "athena-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-engine-ooda = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
