[package]
name = "athena-skills-loader"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
