[package]
name = "athena-swarm"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-act = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
