[package]
name = "athena-ws"
version.workspace = true
edition.workspace = true

[dependencies]
athena-types = { workspace = true }
athena-events = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
