[project]
name = "athena-tool-{{TOOL_NAME}}"
version = "0.1.0"
description = "Athena MCP tool server: {{TOOL_NAME}}"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
