[project]
name = "athena-tool-ad-persistence"
version = "0.1.0"
description = "Athena MCP tool server: AD persistence (Skeleton Key/DNSAdmins/DSRM/SSP)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "impacket>=0.12.0",
    "ldap3>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
